--- a/index.html
+++ b/index.html
@@ -1,56 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+			integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="assets/css/style.css" />
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
+		<title>Blacjack</title>
+	</head>
 
-    <title>Blacjack </title>
-</head>
+	<body>
+		<header class="titulo">Blackjack</header>
 
-<body>
+		<div class="row mt-2">
+			<div id="divBotones" class="col text-center">
+				<button id="btn-nuevo" class="btn btn-danger">Nuevo Juego</button>
+				<button id="btn-pedir" class="btn btn-primary">Pedir Carta</button>
+				<button id="btn-detener" class="btn btn-primary">Detener</button>
+			</div>
+		</div>
 
-    <header class="titulo">
-        Blackjack
-    </header>
+		<div class="row container">
+			<div class="col">
+				<h1>Jugador 1 - <small>0</small></h1>
+				<div id="jugador-cartas">
+					<!-- <img class="carta" alt="" src="assets/cartas/2C.png" /> -->
+				</div>
+			</div>
+		</div>
 
-    <div class="row mt-2">
-        <div id="divBotones" class="col text-center">
-            <button id="btn-nuevo"class="btn btn-danger">Nuevo Juego</button>
-            <button id="btn-pedir"class="btn btn-primary">Pedir Carta</button>
-            <button id="btn-detener"class="btn btn-primary">Detener</button>
-        </div>
-    </div>
+		<div class="row container mt-2">
+			<div class="col">
+				<h1>Computadora - <small>0</small></h1>
+				<div id="computadora-cartas">
+					<!-- <img class="carta" alt="" src="assets/cartas/3C.png" /> -->
+				</div>
+			</div>
+		</div>
 
-    <div class="row container">
-        <div class="col">
-            <h1>Jugador 1 - <small>0</small></h1>
-            <div id="jugador-cartas">
-                <!-- <img class="carta" src="assets/cartas/2C.png" /> -->
-
-            </div>
-        </div>
-    </div>
-
-
-    <div class="row container mt-2">
-        <div class="col">
-            <h1>Computadora - <small>0</small></h1>
-            <div id="computadora-cartas">
-                <!-- <img class="carta" src="assets/cartas/3C.png" /> -->
-
-            </div>
-        </div>
-    </div>
-
-    <script src="assets/js/underscore-umd-min.js"></script>
-    <script src="assets/js/juego.js"></script>
-
-
-</body>
-
+		<script src="assets/js/underscore-umd-min.js"></script>
+		<script src="assets/js/juego.js"></script>
+	</body>
 </html>
